<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/android:colorBackground"
    android:layout_marginTop="30dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileCard"
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/avatar_description"
                android:src="@drawable/empty_avatar" />

            <TextView
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/placeholder_name" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/placeholder_email" />

            <TextView
                android:id="@+id/roleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Role: " />

            <TextView
                android:id="@+id/unitView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Unit: " />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/preferencesView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="28dp"
        android:text="@string/preferences" />

    <androidx.cardview.widget.CardView
        android:id="@+id/preferencesCard"
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/notificationsTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications" />

            <TextView
                android:id="@+id/notificationsDescriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_select" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/healthButton"
                style="@style/TypeWithIconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                app:icon="@drawable/ic_health_24"
                android:enabled="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/safetyButton"
                style="@style/TypeWithIconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/safety"
                app:icon="@drawable/ic_safety_24"
                android:enabled="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/environmentButton"
                style="@style/TypeWithIconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/environmental"
                app:icon="@drawable/ic_environmental_24"
                android:enabled="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/lostAndFoundButton"
                style="@style/TypeWithIconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost_and_found"
                app:icon="@drawable/ic_lost_and_found_24"
                android:enabled="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/maintenanceButton"
                style="@style/TypeWithIconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maintenance"
                app:icon="@drawable/ic_maintenance_24"
                app:layout_constraintBottom_toBottomOf="parent"
                android:enabled="true" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>