<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/incidentCard"
        style="@style/CardStyle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47">

        <!-- YOU MUST place a layout inside -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_lock_24"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reset_password"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hintView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/reset_password_hint" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailFieldLayout"
                style="@style/TextInputLayout"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_mail_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailField"
                    style="@style/TextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendCodeButton"
                style="@style/My.FilledButton"
                android:layout_marginBottom="50dp"
                android:text="@string/send_code"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>