<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/incidentCard"
        style="@style/CardStyle"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47">

        <!-- YOU MUST place a layout inside -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:layout_width="480px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo560" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/filledTextField"
                style="@style/TextInputLayout"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/mail_icon">

                <com.google.android.material.textfield.TextInputEditText style="@style/TextInputEditText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordBox"
                style="@style/TextInputLayout"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/lock_icon">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/text_button"
                style="@style/My.TextButton"
                android:layout_marginTop="-18dp"
                android:layout_marginBottom="15dp"
                android:text="@string/forgot_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filled_button"
                style="@style/My.FilledButton"
                android:layout_marginBottom="50dp"
                android:text="@string/login"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="?attr/colorOnSurfaceVariant" />

                <com.google.android.material.button.MaterialButton
                    style="@style/My.TextButton"
                    android:text="@string/sign_up_underlined"
                    android:textColor="?attr/colorPrimary"
                    android:minWidth="0dp"
                    android:layout_marginStart="3dp"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>